# metero

./: .gitignore  alembic.ini  app.py  copy_base.py  data_for_base.py  forms.py  notes.txt  populate_base.py  pyproject.toml  radme.md  requirements.txt  reset_demo_data.py  routes.py
app/: __init__.py  routes.py
app/api/: routes.py
app/auth/: routes.py
app/main/: forms.py  routes.py
app/model/: __init__.py  tables.py
app/populate/: data_for_base.py
app/repositories/: base.py  date_repository.py  measure_repository.py  meter_repository.py
app/static/css/: style.css
app/templates/: dashboard.html  layout.html  measurement.html  register.html
migrations/: env.py
migrations/versions/: 67016e9dad17_new_style.py  a6a3e5edc930_initial.py
model/: __init__.py  extensions.py  tables.py
populate/: populate_base.py
static/js/: dashboard.js  table.js
templates/: example.html  index.html  layout.html  login.html  measurement.html  meters_table.html  table.html
