[project]
name = "metero1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.0",
    "dotenv>=0.9.9",
    "email-validator>=2.3.0",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "mysql-connector-python>=9.4.0",
    "psycopg2>=2.9.11",
    "sqlalchemy>=2.0.44",
]
